2006-02-07  Phil Blundell  <pb@reciva.com>

	* week_view.c (week_view): Attach handler to size-allocate signal
	on scrolled window.  Make vertical scrollbar policy ALWAYS.
	(week_view_update): Make minimum size for each cell be 1/7 of the
	available window height.

2006-02-06  Phil Blundell  <pb@reciva.com>

	* Version 0.71 released.

2006-02-06  Phil Blundell  <pb@reciva.com>

	* globals.h (is_reminder): New macro.
	* day_render.c (events_overlap): Use it.
	(event_rect_new): Likewise.
	(day_view_init): Likewise.
	(reminder_view_init): Likewise.
	
	* export-vcal.c (vcal_do_send_bluetooth): Correct data marshalling
	for D-BUS 0.60.

	* event-ui.c (edit_event): Take data from root event rather than
	clone.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* day_view.c (day_view): Don't display sidebar calendar on QVGA
	screens, even in landscape orientation.
	* week_view.c (week_view): Likewise.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* Version 0.70 released.

2006-02-05  Phil Blundell  <pb@reciva.com>

	* day_view.c (day_view): Don't allow reminder area to extend over
	the sidebar calendar.

	* configure.ac (DEP_MODULES): Demand libeventdb 0.19.

2006-02-04  Phil Blundell  <pb@reciva.com>

	* day_view.c (day_view_scroll): New function.
	(changed_callback): Don't call scroll_to() here.
	(day_view): Connect "changed" signal to scrollbar adjustment.
	(sink_scroller): New function.
	* day_view.h (day_view_scroll): New prototype.
	* main.c (set_time_and_day_view): Call day_view_scroll.
	(set_today): Likewise.
	(main): Likewise.

	* event-ui.c (struct edit_state): New members end_date_floating,
	end_time_floating.
	(new_event): Set them to TRUE.
	(sink_end_date, sink_end_time, note_time_change): New functions.
	(note_date_change_appt): Set end date here if it was floating.
	(check_constrains): Deleted.
	(set_notebook_page): Remove call to above function.
	(build_edit_event_window): Use GpeTimeSel rather than combo box