@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2002, 2005 Philip Blundell <philb@gnu.org>
+ * Copyright (C) 2002, 2005, 2006 Philip Blundell <philb@gnu.org>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -12,7 +12,6 @@
 
 extern GtkWidget *day_view (void);
 extern gboolean day_view_combined_times;
-extern void day_free_lists (void);
 extern int day_view_init ();
 extern gboolean day_view_button_press (GtkWidget * widget, GdkEventButton * event, gpointer d);
 extern void day_view_scroll (gboolean);
